feat: java 17, spring boot 3 and many other upgrades (wip)