@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.18</version>
+    <version>3.0.13</version>
   </parent>
 
   <modules>
@@ -30,13 +30,15 @@
   </modules>
 
   <properties>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
 
     <assertj-core.version>1.7.1</assertj-core.version>
     <awaitility.version>1.4.0</awaitility.version>
-    <codahale-metrics.version>3.0.2</codahale-metrics.version>
+    <dropwizard-metrics.version>4.2.23</dropwizard-metrics.version>
     <commons-io.version>2.7</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
     <embed-mongo.version>1.50.0</embed-mongo.version>
@@ -44,7 +46,7 @@
     <freemarker.version>2.3.29</freemarker.version>
     <guava.version>19.0</guava.version>
     <javax.inject.version>1</javax.inject.version>
-    <jersey.version>2.36</jersey.version>
+    <jersey.version>3.1.3</jersey.version>
     <jetty.version>9.4.48.v20220622</jetty.version>
     <jhipsterloaded.version>0.7</jhipsterloaded.version>
     <jjwt.version>0.9.1</jjwt.version>
@@ -62,11 +64,11 @@
     <nimbus-jose-jwt.version>7.9</nimbus-jose-jwt.version>
     <nosqlunit.version>0.7.9</nosqlunit.version>
     <oauth-oidc-sdk.version>5.45</oauth-oidc-sdk.version>
-    <obiba-commons.version>3.1-SNAPSHOT</obiba-commons.version>
-    <oltu.version>1.0.1</oltu.version>
+    <obiba-commons.version>4.0-SNAPSHOT</obiba-commons.version>
     <postgres.version>42.5.1</postgres.version>
-    <protobuf.version>2.5.0</protobuf.version>
+    <protobuf.version>3.24.3</protobuf.version>
     <protobuf-java-format.version>1.2.1-obiba</protobuf-java-format.version>
+    <servlet-api.version>6.0.0.RC1-jbossorg-1</servlet-api.version>
     <shiro.version>1.12.0</shiro.version>
     <shiro-extras.version>1.1.0</shiro-extras.version>
     <totp.version>1.7.1</totp.version>
@@ -121,42 +123,42 @@
         <type>war</type>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-core</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-ehcache</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-graphite</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-json</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-jvm</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
-        <artifactId>metrics-servlet</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-jakarta-servlet</artifactId>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
-        <artifactId>metrics-servlets</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-jakarta-servlets</artifactId>
+        <version>${dropwizard-metrics.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>com.codahale.metrics</groupId>
+            <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-healthchecks</artifactId>
           </exclusion>
         </exclusions>
@@ -175,6 +177,17 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>${servlet-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.json</groupId>
+        <artifactId>jakarta.json-api</artifactId>
+        <version>2.1.3</version>
       </dependency>
       <dependency>
         <groupId>javax.inject</groupId>
@@ -233,6 +246,13 @@
         <groupId>com.jayway.awaitility</groupId>
         <artifactId>awaitility</artifactId>
         <version>${awaitility.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.easymock/easymock -->
+      <dependency>
+        <groupId>org.easymock</groupId>
+        <artifactId>easymock</artifactId>
+        <version>5.2.0</version>
         <scope>test</scope>
       </dependency>
 
@@ -440,17 +460,6 @@
       </dependency>
 
       <dependency>
-        <groupId>org.apache.oltu.oauth2</groupId>
-        <artifactId>org.apache.oltu.oauth2.authzserver</artifactId>
-        <version>${oltu.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.oltu.oauth2</groupId>
-        <artifactId>org.apache.oltu.oauth2.resourceserver</artifactId>
-        <version>${oltu.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>io.jsonwebtoken</groupId>
         <artifactId>jjwt</artifactId>
         <version>${jjwt.version}</version>
@@ -500,7 +509,7 @@
       </exclusions>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-logging</artifactId>
       <exclusions>
@@ -513,6 +522,16 @@
           <artifactId>log4j-over-slf4j</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>-->
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <classifier>jakarta</classifier>
     </dependency>
 
     <dependency>
@@ -556,10 +575,6 @@
       <scope>compile</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
@@ -661,14 +676,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
-          <!-- Force alphabetical order to have a reproducible build -->
-          <runOrder>alphabetical</runOrder>
-          <classpathDependencyExcludes>
-            <classpathDependencyExclude>org.springsource.loaded:springloaded</classpathDependencyExclude>
-          </classpathDependencyExcludes>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
 
@@ -725,23 +735,6 @@
             <goals>
               <goal>jar</goal>
             </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.5.0</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <additionalparam>-Xdoclint:none</additionalparam>
-            </configuration>
           </execution>
         </executions>
       </plugin>
